fix : padding collapse content

--- a/src/styles/collapse.sass
+++ b/src/styles/collapse.sass
@@ -61,4 +61,4 @@
         &.open
             max-height: 300px
             opacity: 1
-            padding: 20px
+            padding: 20px 15px 20px 20px
